--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="headerContent">
             <nav>
                 <img src="images/menu-regular-24.png" class="menu"/>
                 <ul class="nav largerNav">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Me </a></li>
-                    <li><a href="index.html">Contact me</a></li>
+                    <li><a href="About.html">About Me </a></li>
+                    <li><a href="ContactUs.html">Contact me</a></li>
                 </ul>
             </nav>
             <div class="intoduction">
@@ -117,7 +117,7 @@
                 </div>
         </div>
         </div>
-        <p>Proudly made with ❤️ by Sammy Mureithi</p>
+        <p>Proudly made with ❤️ by <br> Sammy Mureithi</p>
     </footer>
 </body>
 <script src="index.js"></script>
