--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="headerContent">
             <nav>
-                <img src="images/menu-regular-24.png" class="menu"/>
+                <img src="images/Me.png" class="menu"/>
                 <ul class="nav largerNav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About Me </a></li>
